# LexiGO

./: .gitignore  alembic.ini  lexigo.db  pyproject.toml  test.py
migrations/: env.py
migrations/versions/: 28cd67e09048_add_active_to_users.py  6d5ceeb22c1c_add_active_to_users.py  83ff03e008d3_audio_column_deleted_from_dictionary.py
src/: bot.py  config.py  database.py  keyboards.py  llm.py  main.py  migrate.py  states.py
src/core/: __init__.py  bot.py
src/database/: __init__.py  admin.py  dictionary.py  engine.py  models.py  quiz.py  users.py
src/routes/: __init__.py  admin.py  dictionary.py  menu.py  quiz.py  search.py  start.py
src/services/: __init__.py  llm.py  tts.py  word_audio.py
