[project]
name = "lexigo"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiogram>=3.25.0",
    "aiohttp>=3.13.3",
    "aiomysql>=0.3.2",
    "aiosqlite>=0.22.1",
    "alembic>=1.18.4",
    "asyncpg>=0.31.0",
    "beautifulsoup4>=4.14.3",
    "groq>=1.0.0",
    "gtts>=2.5.4",
    "openai>=2.21.0",
    "psycopg2>=2.9.11",
    "pydantic-settings>=2.13.0",
    "pymysql>=1.1.2",
    "requests>=2.32.5",
    "sqlalchemy>=2.0.46",
]
